log/build_2022-08-09_03-49-06/package_python/stderr.log
  File "/home/diego/Workspaces/ros2_control_diffbot_ws/install/package_python/lib/python3.8/site-packages/package_python/py_pub_sub_wheels.py", line 30
    global lineal=msg.linear.x
                 ^
SyntaxError: invalid syntax

